.provarCaches/00D410000011HE0EAM/objects/rstkf__gljetemplth__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_gljetemplth</customHelpPage>
    <description>gljetemplth__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__gljetemplth_glcmp__r.rstkf__externalid__c &amp; &apos;_&apos; &amp;  rstkf__gljetemplth_templateid__c</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__gljetemplth_templateid__c+&quot; ( &quot;+LEFT(rstkf__gljetemplth_desc__c, 80 - (LEN(rstkf__gljetemplth_templateid__c)+5))+&quot; )&quot;</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetemplth_accountsonly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accounts Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetemplth_amountsreq__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amounts Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetemplth_desc__c</fullName>
        <label>Entry Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetemplth_fromdate__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetemplth_glcmp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>General Journal Entry Template Headers</relationshipLabel>
        <relationshipName>gljetemplths</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetemplth_lastxfergljh__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>gljetemplth_lastxfergljh__c</description>
        <label>Last JE created from this template</label>
        <referenceTo>rstkf__gljh__c</referenceTo>
        <relationshipLabel>General Journal Entry Template Headers</relationshipLabel>
        <relationshipName>gljetemplths</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetemplth_lastxferpd__c</fullName>
        <label>Last Period Transferred to a JE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetemplth_lastxferyear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Last Year Transferred to a JE</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>General Journal Entry Template Headers</relationshipLabel>
        <relationshipName>gljetemplths</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetemplth_owner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Person Responsible</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>General Journal Entry Template Headers</relationshipLabel>
        <relationshipName>gljetemplths</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetemplth_reversing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked,Journal Entries created from this template will be automatically reversed in the period following the period of posting.</description>
        <label>Reversing Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetemplth_stdid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Optional 10-character field. If used, it must be predefined in Financial System Setup &gt; Journal Entry Standard ID. Used to categorize a template &amp; journal entries (JE) created from it (Ex: Emp Exp, Reclass AP). In this usage, the ID may be used a # of times. Can also uniquely identify a template to be converted to a JE once per Acctg period using &apos;Convert JE Templates to JEs for a Period&apos;. In this usage, only 1 template per standard ID may be active at any 1 time.</description>
        <label>Std ID</label>
        <referenceTo>rstkf__gljestdid__c</referenceTo>
        <relationshipLabel>General Journal Entry Template Headers</relationshipLabel>
        <relationshipName>gljetemplths</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetemplth_templateid__c</fullName>
        <label>Template ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetemplth_thrudate__c</fullName>
        <label>Effective Through</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>General Journal Entry Template Header</label>
    <listViews>
        <fullName>rstkf__RS_Journal_Entry_Templates</fullName>
        <columns>NAME</columns>
        <columns>rstkf__gljetemplth_glcmp__c</columns>
        <columns>rstkf__gljetemplth_templateid__c</columns>
        <columns>rstkf__gljetemplth_stdid__c</columns>
        <columns>rstkf__gljetemplth_desc__c</columns>
        <columns>rstkf__gljetemplth_amountsreq__c</columns>
        <columns>rstkf__gljetemplth_owner__c</columns>
        <columns>rstkf__gljetemplth_fromdate__c</columns>
        <columns>rstkf__gljetemplth_thrudate__c</columns>
        <columns>rstkf__gljetemplth_reversing__c</columns>
        <columns>rstkf__gljetemplth_lastxferpd__c</columns>
        <columns>rstkf__gljetemplth_lastxferyear__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Journal Entry Templates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Journal_Entry_Templates_Filtered</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>rstkf__gljetemplth_glcmp__c</columns>
        <columns>rstkf__gljetemplth_templateid__c</columns>
        <columns>rstkf__gljetemplth_stdid__c</columns>
        <columns>rstkf__gljetemplth_desc__c</columns>
        <columns>rstkf__gljetemplth_amountsreq__c</columns>
        <columns>rstkf__gljetemplth_owner__c</columns>
        <columns>rstkf__gljetemplth_fromdate__c</columns>
        <columns>rstkf__gljetemplth_thrudate__c</columns>
        <columns>rstkf__gljetemplth_reversing__c</columns>
        <columns>rstkf__gljetemplth_lastxferpd__c</columns>
        <columns>rstkf__gljetemplth_lastxferyear__c</columns>
        <filterScope>Everything</filterScope>
        <label>Journal Entry Templates - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Journal Entry Template Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstkf__Company_can_not_be_modified</fullName>
        <active>true</active>
        <description>Company can not be modified</description>
        <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(rstkf__gljetemplth_glcmp__c) )</errorConditionFormula>
        <errorMessage>Company can not be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Description_can_not_be_Null</fullName>
        <active>true</active>
        <description>Description_can_not_be_Null</description>
        <errorConditionFormula>ISBLANK(TRIM(rstkf__gljetemplth_desc__c))</errorConditionFormula>
        <errorMessage>Please Enter Description</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Either_Account_Only_or_Amounts_Requir</fullName>
        <active>true</active>
        <description>Either &apos;Account Only&apos; or &apos;Amounts Required&apos; Flag can be Set</description>
        <errorConditionFormula>AND((rstkf__gljetemplth_accountsonly__c = TRUE),( rstkf__gljetemplth_amountsreq__c  = TRUE))</errorConditionFormula>
        <errorMessage>Either &apos;Account Only&apos; or &apos;Amounts Required&apos; Flag can be Set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__External_Id_can_not_be_modified</fullName>
        <active>true</active>
        <description>External_Id_can_not_be_modified</description>
        <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(rstkf__externalid__c) )</errorConditionFormula>
        <errorMessage>External Id can not be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Person_responsible_must_not_be_NULL</fullName>
        <active>true</active>
        <description>Person responsible must not be NULL</description>
        <errorConditionFormula>ISBLANK(rstkf__gljetemplth_owner__c)</errorConditionFormula>
        <errorMessage>Please Enter Person responsible</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__STD_ID_must_be_of_same_Company</fullName>
        <active>true</active>
        <description>STD_ID_must_be_of_same_Company</description>
        <errorConditionFormula>IF(ISBLANK(rstkf__gljetemplth_stdid__c), false, rstkf__gljetemplth_glcmp__c != rstkf__gljetemplth_stdid__r.rstkf__gljestdid_glcmp__c)</errorConditionFormula>
        <errorMessage>STD ID must be of same Company of Header</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Template_ID_can_not_be_Null</fullName>
        <active>true</active>
        <description>Template ID can not be Null</description>
        <errorConditionFormula>ISBLANK(TRIM(rstkf__gljetemplth_templateid__c))</errorConditionFormula>
        <errorMessage>Pleas Enter Template ID</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Template_ID_can_not_be_modified</fullName>
        <active>true</active>
        <description>Template ID can not be modified</description>
        <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(rstkf__gljetemplth_templateid__c) )</errorConditionFormula>
        <errorMessage>Template ID can not be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Through_Date_must_be_reater_than_From_Da</fullName>
        <active>true</active>
        <description>Through Date must be greater than From Date</description>
        <errorConditionFormula>rstkf__gljetemplth_fromdate__c &gt; rstkf__gljetemplth_thrudate__c</errorConditionFormula>
        <errorMessage>Through Date must be greater than From Date</errorMessage>
    </validationRules>
</CustomObject>